feat(fxdriver): restore inspection capabilities